# Tech_Learning

./: C.docx  C笔记.docx  Git.docx  Kernel.docx  README.md  Shell.docx  vimrc
OS/: README.md
OS/User/: Unix系统编程+网络笔记.docx
OS/User/IPC_code/fifo/: read_fifo  read_fifo.cpp  write_fifo  write_fifo.cpp
OS/User/IPC_code/msg/: msg_recv1  msg_recv1.cpp  msg_recv2  msg_recv2.cpp  msg_send  msg_send.cpp
OS/User/IPC_code/pipe/: pipe.cpp  popen.cpp
OS/User/IPC_code/semaphore/: consume  consume.cpp  provide  provide.cpp
OS/User/IPC_code/shm/: define.h  shmread  shmread.cpp  shmwrite  shmwrite.cpp
OS/User/IPC_code/signal/: signal  signal.cpp
OS/User/IPC_code/socket+IO multipling+peace timeout/client/: client.cpp  client.h  main.cpp
OS/User/IPC_code/socket+IO multipling+peace timeout/server/: CMakeLists.txt
OS/User/IPC_code/socket+IO multipling+peace timeout/server/include/: definition.h  server.h
OS/User/IPC_code/socket+IO multipling+peace timeout/server/src/: CMakeLists.txt  cJSON.cpp  main.cpp  server.cpp
OS/User/IPC_code/synchronization&mutex/: synchronization_mutex.cpp
